--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           ⚠️⚠️⚠️
         -->
       <a-entity position="0 0 0.5" scale="0.5 0.5 0.5"
-        gltf-model="./knight_witch/scene.gltf">
+        src="./knight_witch/textures/knight_baseColor.png">
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
