--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <!-- <a-scene> -->
-      <a-assets>
-        <img id="my-image" src="./knight_witch/textures/knight_baseColor.png">
-      </a-assets>
-    <!-- </a-scene> -->
+    <a-marker preset="hiro">
+      <!-- we use cors proxy to avoid cross-origin problems -->
+      <!--
+          ⚠️⚠️⚠️
+          https://arjs-cors-proxy.herokuapp.com/ is now offline, Heroku has dismissed all his free plans from November 2022.
+          You need to host your own proxy and use it instead. The proxy is based on CORS Anywhere (see https://github.com/Rob--W/cors-anywhere).
+          ⚠️⚠️⚠️
+        -->
+        <a-image src="./knight_witch/textures/knight_baseColor.png"></a-image>
+
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
