--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
           You need to host your own proxy and use it instead. The proxy is based on CORS Anywhere (see https://github.com/Rob--W/cors-anywhere).
           ⚠️⚠️⚠️
         -->
-        <a-image src="./knight_witch/textures/knight_baseColor.png"></a-image>
-
+      <a-entity position="0 0 0.5" scale="0.5 0.5 0.5" rotation="45 90 180"
+        gltf-model="./knight_witch/scene.gltf">
+      </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
