--- a/index.html
+++ b/index.html
@@ -7,17 +7,7 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <!-- we use cors proxy to avoid cross-origin problems -->
-      <!--
-          ⚠️⚠️⚠️
-          https://arjs-cors-proxy.herokuapp.com/ is now offline, Heroku has dismissed all his free plans from November 2022.
-          You need to host your own proxy and use it instead. The proxy is based on CORS Anywhere (see https://github.com/Rob--W/cors-anywhere).
-          ⚠️⚠️⚠️
-        -->
-      <!-- <a-entity position="0 0 0" scale="0.5 0.5 0.5"
-        gltf-model="./knight_witch/scene.gltf">
-      </a-entity> -->
-      <a-image src="knight_witch/clique-images-hSB2HmJYaTo-unsplash.jpg" rotation="90 0 180"></a-image>
+      <a-image src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" rotation="90 0 180"></a-image>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
