added new image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-image src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" rotation="90 0 180"></a-image>
+      <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180"></a-image>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
