--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <a-marker preset="kanji">
+    <a-marker preset="custom">
       <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="1 1 1"></a-image>
     </a-marker>
     <a-entity camera></a-entity>
