--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
-    <a-marker preset="custom" type="pattern" url="./knight_witch/pattern-wallpaperflare.com_wallpaper.patt">
-      <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="1 1 1"></a-image>
+    <a-marker preset="hiro">
+      <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="3 3 3"></a-image>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
