--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="1.5 1.5 1.5"></a-image>
-    </a-marker>
+      <!-- <a-image src="knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="1.5 1.5 1.5"></a-image> -->
+      <a-entity gltf-model="./knight_witch/scene.gltf" rotation="90 0 180" scale="1.5 1.5 1.5">
+      </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 </body>
