--- a/ar_image.html
+++ b/ar_image.html
@@ -27,7 +27,7 @@
       <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
       <a-entity camera look-controls>
         <a-entity geometry="primitive: plane; height: 0.2; width: 0.2" position="0 0 -1"
-                  material="color: gray; opacity: 0.5"></a-entity>
+                 ></a-entity>
       </a-entity>
     </a-scene>
   </body>
