--- a/ar_image.html
+++ b/ar_image.html
@@ -26,8 +26,8 @@
       <!-- <a-entity camera></a-entity> -->
       <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
       <a-entity camera look-controls>
-        <a-entity position="0 0 -1">
-                </a-entity>
+        <a-entity geometry="primitive: plane; height: 0.2; width: 0.2" position="0 0 -1"
+                 ></a-entity>
       </a-entity>
     </a-scene>
   </body>
