--- a/ar_image.html
+++ b/ar_image.html
@@ -26,7 +26,7 @@
       <!-- <a-entity camera></a-entity> -->
       <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
       <a-entity camera look-controls>
-        <a-entity geometry="primitive: plane;" position="0 0 -1"></a-entity>
+        <a-entity position="0 0 -1"></a-entity>
       </a-entity>
     </a-scene>
   </body>
