--- a/ar_image.html
+++ b/ar_image.html
@@ -25,9 +25,7 @@
         <a-image src="./knight_witch/tree-736885__480.jpg" rotation="90 0 180" scale="0.5 0.5 0.5"></a-image>
       <!-- <a-entity camera></a-entity> -->
       <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
-      <a-entity camera look-controls>
-        <a-entity position="0 0 -1"></a-entity>
-      </a-entity>
+      <a-entity camera look-controls position="0 0 -1"><a-entity >
     </a-scene>
   </body>
 </body>
