--- a/3d_ar_image.html
+++ b/3d_ar_image.html
@@ -13,8 +13,8 @@
     <a-entity camera></a-entity>
   </a-scene> -->
   <a-scene ar>
-    <a-entity gltf-model="./knight_witch/scene.gltf" rotation="270 0 0" scale="0.5 0.5 0.5">
-    <a-entity camera look-controls position="0 -0.01 1.6"></a-entity>
+    <a-entity gltf-model="./knight_witch/scene.gltf">
+    <a-entity camera look-controls position="0 -0.01 15.6"></a-entity>
   </a-scene>
 </body>
 
