--- a/ar_image.html
+++ b/ar_image.html
@@ -23,7 +23,7 @@
     <!-- <a-entity gltf-model="./knight_witch/scene.gltf" scale="0.5 0.5 0.5">  -->
     <a-image src="./knight_witch/clique-images-hSB2HmJYaTo-unsplash.jpg" rotation="360 0 360" scale="0.5 0.5 0.5"></a-image>
     <!-- <a-entity camera></a-entity> -->
-    <a-entity camera position="0 -0.01 1.6"></a-entity>
+    <a-entity camera look-controls position="0 -0.01 1.6"></a-entity>
   </a-scene>
 </body>
 
